--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -10,7 +10,7 @@
 	 left: 0;
 	 top: 0;
 	 height: 100%;
-	 width: 78px;
+	 width: 90px;
 	 background: #FFCF52;
 	 padding: 6px 14px;
 	 z-index: 99;
@@ -38,10 +38,9 @@
 	 top: 50%;
 	 right: 0;
 	 transform: translateY(-50%);
-	 font-size: 22px;
 	 transition: all 0.4s ease;
-	 font-size: 23px;
-	 text-align: center;
+	 font-size: 35px;
+	 text-align: left;
 	 cursor: pointer;
 	 transition: all 0.5s ease;
 }
@@ -92,7 +91,7 @@
 	 align-items: center;
 	 text-decoration: none;
 	 transition: all 0.4s ease;
-	 background: #11101d;
+	 background: #FFFAFA38;
 }
  .sidebar li a:hover {
 	 background: #fff;
@@ -115,16 +114,13 @@
 	 transition: 0.4s;
 }
  .sidebar li i {
-	 height: 50px;
-	 line-height: 50px;
-	 font-size: 18px;
+	 height: 60px;
+	 justify-content: center;
+	 align-items: center;
+	 font-size: 25px;
 	 border-radius: 12px;
 }
- .sidebar li .profile-details {
-	 display: flex;
-	 align-items: center;
-	 flex-wrap: nowrap;
-}
+
  .sidebar li img {
 	 height: 45px;
 	 width: 45px;
@@ -132,28 +128,7 @@
 	 border-radius: 6px;
 	 margin-right: 10px;
 }
- .sidebar input {
-	 font-size: 15px;
-	 color: #fff;
-	 font-weight: 400;
-	 outline: none;
-	 height: 50px;
-	 width: 100%;
-	 width: 50px;
-	 border: none;
-	 border-radius: 12px;
-	 transition: all 0.5s ease;
-	 background: #1d1b31;
-}
- .sidebar .bx-search {
-	 position: absolute;
-	 top: 50%;
-	 left: 0;
-	 transform: translateY(-50%);
-	 font-size: 22px;
-	 background: #1d1b31;
-	 color: #fff;
-}
+
  .sidebar .bx-search:hover {
 	 background: #fff;
 	 color: #11101d;
@@ -165,29 +140,17 @@
 	 left: 0;
 	 bottom: -8px;
 	 padding: 10px 14px;
-	 background: #1d1b31;
+	 background: #FFFAFA38;
 	 transition: all 0.5s ease;
 	 overflow: hidden;
 }
- .sidebar li.profile .name {
-	 font-size: 15px;
-	 font-weight: 400;
-	 color: #fff;
-	 white-space: nowrap;
-}
- .sidebar li.profile .job {
-	 font-size: 15px;
-	 font-weight: 400;
-	 color: #fff;
-	 white-space: nowrap;
-	 font-size: 12px;
-}
+
  .sidebar .profile #log_out {
 	 position: absolute;
 	 top: 50%;
 	 right: 0;
 	 transform: translateY(-50%);
-	 background: #1d1b31;
+	 background: #FFCF52;
 	 width: 100%;
 	 height: 60px;
 	 line-height: 60px;
@@ -195,7 +158,7 @@
 	 transition: all 0.5s ease;
 }
  .sidebar.open {
-	 width: 250px;
+	 width: 300px;
 }
  .sidebar.open .logo-details .icon {
 	 opacity: 1;
@@ -218,7 +181,7 @@
 	 width: 100%;
 }
  .sidebar.open .bx-search:hover {
-	 background: #1d1b31;
+	 background: #FFCF52;
 	 color: #fff;
 }
  .sidebar.open li.profile {
