--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -143,6 +143,7 @@
 	 background: #FFFAFA38;
 	 transition: all 0.5s ease;
 	 overflow: hidden;
+	 cursor: pointer;
 }
 
  .sidebar .profile #log_out {
@@ -151,7 +152,7 @@
 	 right: 0;
 	 transform: translateY(-50%);
 	 background: #FFCF52;
-	 width: 100%;
+	 /* width: 100%; */
 	 height: 60px;
 	 line-height: 60px;
 	 border-radius: 0px;
